Add missing spanish translations

--- a/public/locales/es/sidebar.json
+++ b/public/locales/es/sidebar.json
@@ -7,5 +7,7 @@
   "Import data": "Importar conversaciones",
   "Are you sure?": "¿Estás seguro?",
   "Clear conversations": "Borrar conversaciones",
-  "Export data": "Exportar conversaciones"
+  "Export data": "Exportar conversaciones",
+  "Settings": "Ajustes",
+  "Save": "Guardar"
 }
