--- a/public/locales/es/settings.json
+++ b/public/locales/es/settings.json
@@ -1,4 +1,7 @@
 {
   "Dark mode": "Modo oscuro",
-  "Light mode": "Modo claro"
+  "Light mode": "Modo claro",
+  "Theme": "Tema",
+  "Temperature": "Temperatura",
+  "Save": "Guardar"
 }
