--- a/public/locales/es/settings.json
+++ b/public/locales/es/settings.json
@@ -1,4 +1,6 @@
 {
   "Dark mode": "Modo oscuro",
-  "Light mode": "Modo claro"
+  "Light mode": "Modo claro",
+  "Default Model": "Modelo predeterminado",
+  "System default": "Predeterminado del sistema"
 }
