--- a/public/locales/es/sidebar.json
+++ b/public/locales/es/sidebar.json
@@ -11,5 +11,6 @@
   "Go to Admin": "Ir a panel de administración",
   "Go to Chat": "Ir a Chat",
   "Admin dashboard": "Panel de administración",
-  "Users": "Usuarios"
+  "Users": "Usuarios",
+  "Usage report": "Reporte de uso"
 }
