--- a/public/locales/es/error.json
+++ b/public/locales/es/error.json
@@ -1,5 +1,7 @@
 {
     "llmRateLimitReached": "¡Ups! Debido a la alta demanda, nuestro servicio esté temporalmente no disponible. Por favor, ten paciencia y vuelve a intentarlo en un momento. Si el problema persiste, por favor contacta a {{supportEmail}}.",
     "llmServiceOverloaded": "¡Ups! Debido a la alta demanda, nuestro servicio esté temporalmente no disponible. Por favor, ten paciencia y vuelve a intentarlo en un momento. Si el problema persiste, por favor contacta a {{supportEmail}}.",
+    "userUsageLimitReached": "¡Ups! Has alcanzado el límite mensual de la API. Por favor, ponte en contacto con el equipo administrativo para recibir asistencia, en {{supportEmail}}.",
+    "modelUsageLimitReached": "Parece que se ha alcanzado el límite de cuota del modelo de LLM seleccionado. Por favor, intenta usar otro modelo o ponte en contacto con nuestro equipo de soporte para recibir ayuda, en {{supportEmail}}.",
     "errorDefault": "Ocurrió un error inesperado. Por favor, inténtalo de nuevo en un momento. Si el problema persiste, por favor contacta a {{supportEmail}}."
 }
