Added  model select  to usage report

--- a/public/locales/es/admin.json
+++ b/public/locales/es/admin.json
@@ -16,5 +16,7 @@
   "Total tokens": "Total de tokens",
   "Total USD": "Total de USD",
   "Default": "Por defecto",
-  "Export CSV": "Exportar CSV"
+  "Export CSV": "Exportar CSV",
+  "An error occurred": "Ha ocurrido un error",
+  "No data": "No hay datos"
 }
