Added token count tooltip

--- a/public/locales/es/chat.json
+++ b/public/locales/es/chat.json
@@ -32,5 +32,8 @@
   "precise": "Preciso",
   "neutral": "Neutral",
   "creative": "Creativo",
-  "New Conversation": "Nueva Conversación"
+  "New Conversation": "Nueva Conversación",
+  "tokenCountTooltipTotalTokens": "El mensaje actual enviará {{inputCount}} tokens en adición a los {{contextCount}} tokens de mensajes anteriores en el chat actual.",
+  "tokenCountTooltipAboutConsumtion": "Esta cantidad de tokens, en conjunto con el modelo de LLM seleccionado y la respuesta del chatbot, determina la cantidad de presupuesto consumido en el mensaje.",
+  "tokenCountTooltipHowToReduceConsumption": "Para reducir el consumo, puedes seleccionar un modelo más barato, reducir el tamaño del mensaje enviado o crear chats nuevos para evitar enviar mensajes anteriores que no sean necesarios."
 }
